# lumetrack

./: .gitignore  AGENT.md  README.md  dump.rdb  rodemap.md  run_all.sh
.github/: copilot-instructions.md
.github/workflows/: gateway-lint-and-format.yml  telemetry-lint-and-format.yml  ts-order-manager.yml
discovery/: Cargo.toml
discovery/src/: main.rs
discovery/src/config/: env.rs
discovery/src/controllers/: mod.rs  search_controller.rs
discovery/src/routes/: mod.rs  search_routes.rs
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/src/config/: env.rs
identity-service/: README.md  package.json  tsconfig.json
identity-service/src/: index.ts
lumetrack-app/: app.json  package.json
lumetrack-app/app/: _layout.tsx
lumetrack-app/hooks/: useTelemetry.ts
lumetrack-driver-app/: .env-examples  app.json  env.ts  package.json
lumetrack-driver-app/app/: _layout.tsx
lumetrack-driver-app/app/(tabs)/: _layout.tsx  index.tsx
lumetrack-driver-app/hooks/: useTelemetry.ts
lumetrack-driver-app/utils/: index.ts
order-manager/: README.md  eslint.config.js  package.json  tsconfig.json
order-manager/src/: index.ts
telemetry/: Cargo.toml
telemetry/src/: main.rs  ws.rs
telemetry/src/config/: env.rs
